# parser-python

./: README.md  pyproject.toml
spy_parser/: __init__.py  html_parser.py  json_parser.py  parser.py  parsing_model.py
tests/: __main__.py  parse_html.py  parse_json.py
xcrap_parser/: __init__.py  html_parser.py  html_parsing_model.py  json_parsing_model.py  parser.py
