[tool.poetry]
name = "spy-parser"
version = "0.1.0"
description = "Spy Parser a is oriented model  HTML and JSON Parser"
authors = ["Marcuth <marcuth@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
parsel = "^1.10.0"
jmespath = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
